// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add lighting devices in group 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Add lighting devices in group 2`] = `
Array [
  Object {
    "brand": "FREON_2",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-2",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
  Object {
    "brand": "FREON_1",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-1",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
]
`;

exports[`Create lighting groups 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Get lighting group 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Get lighting groups 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Get lighting groups 2`] = `
Array [
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
]
`;

exports[`Move lighting devices to another group 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Move lighting devices to another group 2`] = `
Array [
  Object {
    "brand": "FREON_2",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-2",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
  Object {
    "brand": "FREON_1",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-1",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
]
`;

exports[`Move lighting devices to another group 3`] = `
Array [
  Object {
    "brand": "FREON_2",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "NOT_INSTALLED",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "ГОСТИНАЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-2",
    "placeOfInstallation": "ГОСТИНАЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
  Object {
    "brand": "FREON_1",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "NOT_INSTALLED",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "ГОСТИНАЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-1",
    "placeOfInstallation": "ГОСТИНАЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
]
`;

exports[`Remove lighting devices from group 1`] = `
Array [
  Object {
    "devices": Array [],
    "location": "КУХНЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ГОСТИНАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ИГРОВАЯ",
    "state": "OFF",
  },
  Object {
    "devices": Array [],
    "location": "ВАННАЯ",
    "state": "OFF",
  },
]
`;

exports[`Remove lighting devices from group 2`] = `
Array [
  Object {
    "brand": "FREON_2",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-2",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
  Object {
    "brand": "FREON_1",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-1",
    "placeOfInstallation": "КУХНЯ",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
]
`;

exports[`Remove lighting devices from group 3`] = `
Array [
  Object {
    "brand": "FREON_2",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "NOT_INSTALLED",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-2",
    "placeOfInstallation": "NOT_INSTALLED",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
  Object {
    "brand": "FREON_1",
    "currency": "RUB",
    "history": Array [
      Object {
        "placeOfInstallation": "КУХНЯ",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
      Object {
        "placeOfInstallation": "NOT_INSTALLED",
        "turnedOffAt": null,
        "turnedOnAt": null,
        "workedMs": null,
      },
    ],
    "images": Array [
      "image_1",
      "image_2",
      "image_3",
    ],
    "lightTemperatureKelvin": 4000,
    "lumens": "2700",
    "name": "lightning-device-1",
    "placeOfInstallation": "NOT_INSTALLED",
    "power": "24",
    "price": "600",
    "resourceMs": 30000,
    "sellersWebsite": "http://feron.ru",
    "state": "IN_STOCK",
  },
]
`;
